# hallguard

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
benchmarks/: hallucination_rate.py
benchmarks/datasets/: medical_qa.json  synthetic_qa.json
examples/: research_agent.py
hallucination_guard/: __init__.py  exceptions.py  graph.py  schemas.py  serde.py  state.py
hallucination_guard/domain/: __init__.py  base.py  general.py  medical.py
hallucination_guard/llm/: __init__.py  openai_adapter.py  protocols.py
hallucination_guard/nodes/: __init__.py  aggregator.py  critic_node.py  error_output.py  factcheck_gate.py  retry_node.py  source_content_gate.py  source_fetch_gate.py  structured_node.py
hallucination_guard/retry/: __init__.py  directive.py  hint_builder.py
tests/: test_benchmark_smoke.py  test_critic_node.py  test_error_output.py  test_factcheck_gate.py  test_general_domain.py  test_graph_integration.py  test_hint_builder.py  test_medical_domain.py  test_openai_adapter.py  test_parallel_checkpointer.py  test_parallel_graph.py  test_protocols.py  test_reducer.py  test_retry_node.py  test_serde.py  test_source_content_gate.py  test_source_fetch_gate.py  test_state.py  test_structured_node.py
